Added nrepl-server support

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 name: Basilisp Jupyter Kernel package
 
 on:
-  push:
   pull_request:
+    types: [ opened, synchronize, reopened ]
+  push:
+    branches: [ main ]
 
 jobs:
   build:
@@ -11,22 +13,25 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "pypy-3.10"]
         include:
           - os: windows-latest
-            python-version: "3.12"
+            python-version: "3.13"
           - os: macos-latest
-            python-version: "3.12"
+            python-version: "3.13"
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -e ".[test]"
-      - name: Test with kernel tester
+          pipx install hatch
+          hatch env create test
+          hatch env find
+      - name: Test
         run: |
-          python -m unittest -v
+          hatch run test:basilisp test -- -v
       - name: Check Kernel
         run: |
-          cd $HOME
-          jupyter kernelspec list | grep basilisp
+          hatch run test:jupyter kernelspec list | grep "jupyter/kernels/basilisp"
