--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,16 +19,27 @@ classifiers = [
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "ipykernel",
     "jupyter_client",
-    "basilisp>=0.1.0b2"
+    "basilisp>=0.3.2",
+    "basilisp-nrepl-async>=0.1.0",
 ]
 
 [project.optional-dependencies]
 test = [
   "jupyter_kernel_test",
+]
+
+[tool.hatch.envs.test]
+dependencies = [
+  "basilisp-pprint",
+  "jupyter_client",
+  "jupyter_kernel_test",
+  "nbclient",
+  "nbformat",
+  "pytest",
 ]
 
 [project.urls]
